# cool

./: .gitignore  Cargo.toml  rust-toolchain.toml  rustc-ice-2024-05-07T05_18_10-110812.txt  rustc-ice-2024-05-11T18_14_29-48712.txt
.VSCodeCounter/2024-03-31_22-10-15/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-03-31_22-16-58/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.cargo/: config.toml
adxl345/: Cargo.toml
adxl345/src/: conf.rs  lib.rs  register.rs
ec800m-at/: Cargo.toml
ec800m-at/src/: client.rs  digester.rs  error.rs  lib.rs  urc.rs
ec800m-at/src/general/: cmds.rs  mod.rs  resps.rs  types.rs
ec800m-at/src/gnss/: cmds.rs  mod.rs  resps.rs  types.rs
ec800m-at/src/mqtt/: cmds.rs  types.rs
shtcx/: Cargo.toml
src/: main.rs
src/apl/: mod.rs
src/drv/: drv_at.rs  drv_gnss.rs  drv_gsensor.rs  drv_net.rs  drv_tsensor.rs  mod.rs
src/fml/: mod.rs
src/fml/acc/: mod.rs
src/fml/alarm/: mod.rs
src/fml/gnss/: mod.rs
src/fml/net/: mod.rs
src/fml/storage/: mod.rs
src/fml/temp/: mod.rs
src/pal/: mlog.rs  mod.rs
src/pal/flash/: mod.rs
src/pal/gnss/: mod.rs
src/pal/gsensor/: mod.rs
src/pal/gsensor/adxl345/: mod.rs
src/pal/modem/: mod.rs
src/pal/modem/ec800m_at/: client.rs  digester.rs  mod.rs  urc.rs
src/pal/modem/ec800m_at/general/: cmds.rs  mod.rs  resps.rs  types.rs
src/pal/modem/ec800m_at/gnss/: cmds.rs  mod.rs  resps.rs  types.rs
src/pal/modem/ec800m_at/mqtt/: cmds.rs  mod.rs  types.rs
src/pal/modem/ec800m_at/net/: cmds.rs  mod.rs  resps.rs
src/pal/rtc/: mod.rs
src/pal/tsensor/: mod.rs
src/pal/tsensor/shtcx/: mod.rs
