[package]
name = "coool"
version = "0.1.0"
authors = ["Damncool0216 <damncool0216@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ec800m-at = { path = "ec800m-at", default-features = false, features = [
    "async",
    "debug",
] }

nmea = { version = "0.6.0", default-features = false, features = [
    "GBS",
    "GGA",
    "GLL",
    "GNS",
    "GSA",
    "GSV",
    "RMC",
    "VTG",
] }
nb = "1.0.0"
log = { version = "0.4.20" }
heapless = { version = "0.8.0" }
static_cell = { version = "2.0", features = ["nightly"] }
atat = { version = "0.22.0", default-features = false, features = [
    "serde_at",
    "derive",
    "bytes",
    "hex_str_arrays",
] }

hal = { package = "esp-hal", version = "0.16.1", features = [
    "esp32c3",
    "embassy",
    "async",
    "embassy-executor-thread",
    "embassy-time-timg0",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
esp-backtrace = { version = "0.11.1", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-storage = { version = "0.3.0", features = ["esp32c3"] }
esp-wifi = { version = "0.4.0", features = ["esp32c3", "async", "wifi", "ble"] }

embassy-executor = { version = "0.5.0", features = [
    "integrated-timers",
    "arch-riscv32",
    "task-arena-size-8192",
] }
embassy-time = { version = "0.3.0" }
embassy-sync = {version = "0.5.0", default-features = false}

embedded-hal = { version = "1.0.0" }
#embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
embedded-hal-async = { version = "1.0.0" }
embedded-hal-nb = { version = "1.0.0" }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-svc = { version = "0.27.1", default-features = false, features = [] }
embedded-hal-bus = "0.1.0"

[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
