[package]
name = "ec800m-at"
version = "0.1.0"
edition = "2021"

[dependencies]

# atat = { git = "https://github.com/BlackbirdHQ/atat", rev = "31a45fc", default-features = false, features = [
#     "derive",
#     "bytes",
#     "hex_str_arrays"
# ] }
# atat = {v}
atat = {version = "0.22.0", default-features = false, features = ["serde_at", "derive", "bytes", "hex_str_arrays"]}
nb = "1.0.0"
heapless = { version = "0.8.0"}
heapless-bytes = "0.3"
#defmt = { version = "^0.3.5", optional = true }
embedded-io = { version = "0.6.1", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
log = { version = "0.4.20", optional = true}
[features]
debug = ["log"]
async = ["embedded-io", "embedded-io-async"]
default = ["debug", "async"]